Fix trademark spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@ body {
 }
 
 .bg-golden-yellow {
-    background-color: #ffde00;
+    background-color: #ffde00 !important;
 }
 
 .bg-gold-foil {
-    background-color: #b3a125;
+    background-color: #b3a125 !important;
 }
 
 .bg-transparent-25 {
